Push this, if nothing else.

--- a/ext/Makefile
+++ b/ext/Makefile
@@ -89,7 +89,7 @@ LOCAL_LIBS =
 LIBS = $(LIBRUBYARG_SHARED) -lstdc++  -ldl -lobjc  
 SRCS = Architecture.cpp Cell.cpp CellData.cpp HexCell.cpp MetaArchitecture.cpp Nest_wrap.cpp Rule.cpp
 OBJS = Architecture.o Cell.o CellData.o HexCell.o MetaArchitecture.o Nest_wrap.o Rule.o
-TARGET = NestCore
+TARGET = Nest3
 DLLIB = $(TARGET).bundle
 EXTSTATIC = 
 STATIC_LIB = 
